<resources>
    <string name="app_name">MovieFind</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description_best_movie">We provide a service with an extensive database of modern films, series and TV shows</string>
    <string name="description_save_movie">Save your favorite shows to go back to watching (but you can not watch, sorry)</string>
    <string name="description_share_movie">Share your favorite shows with your friends and your least favorite shows with your enemies</string>
    <string name="description_enjoy_app">Enjoy the process and the app</string>
    <string name="Unknown">Unknown</string>
    <string name="choose_app">Chosen app</string>

    //Авторизация
    <string name="logout_account">logout their profile??</string>
    <string name="btn_logout"><b>Logout</b></string>
    <string name="btn_no"><b>No</b></string>
    <string name="logout_successful"><b>successful</b></string>
    <string name="registration_failed"><b>Registration failed</b></string>
    <string name="sign_in_failed"><b>SignIn failed</b></string>

    //Валидация
    <string name="name_blank"><b>Field name must not be empty</b></string>
    <string name="password_blank"><b>Field password must not be empty</b></string>
    <string name="email_blank"><b>Field email must not be empty</b></string>
    <string name="email_wrong_type">Invalid email form</string>
    <string name="password_min_size">Minimum number of characters 6</string>
    <string name="password_max_size">Maximum number of characters 12</string>
    <string name="password_lower_case_symbol">Password must contain at least one lowercase letter</string>
    <string name="password_upper_case_symbol">Password must contain at least one capital letter</string>
    <string name="password_spec_symbol">Password must contain at least one special character (@#$%^&amp;+=)</string>
    <string name="password_number">Password must contain at least one number</string>
    <string name="email_is_busy">user with this email is already registered app</string>
    <string name="no_user_with_email">user with this email is not registered</string>

    //Another
    <string name="personal_profile">Personal profile</string>
    <string name="country">Country</string>
    <string name="all_movie">All movie:</string>
    <string name="birthday">Birthday:</string>
    <string name="name">Name:</string>
    <string name="i_already_have_an_account">I already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="play">Play</string>
    <string name="description_episode">Description episode</string>
    <string name="all_episodes">All episodes</string>
    <string name="status">Status:</string>
    <string name="description_show">Description show</string>
    <string name="star_cast">Star cast</string>
    <string name="seasons">Seasons</string>
    <string name="age">Age</string>
    <string name="save_change">Save change</string>
    <string name="you_favorite_list">You favorite list</string>
    <string name="no_files">No files</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="phone">Phone:</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="change_password">Change Password</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="help_center">Help center</string>
    <string name="allmovies">AllMovies</string>
    <string name="notification">Notification</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="episode_list">Episode list</string>
    <string name="sign_in">Sign In</string>
    <string name="all_movies">All movies</string>
    <string name="search">Search</string>
    <string name="hello_please_enter_your_details">Hello! \nPlease enter your details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="the_latest_movies_and_series_are_here">The latest movies and series are here</string>
    <string name="name_hint">Name</string>
    <string name="get_started">Get Started</string>
    <string name="please_wait">Please wait…</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="image_not_found">Image not found</string>
    <string name="saved">Saved</string>
    <string name="error_save">Error save</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm">Confirm</string>
    <string name="value_is_empty">Value is empty</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="sorry">Sorry!</string>
    <string name="video_not_available">Video not available at the moment, please try again later</string>
    <string name="OK">OK</string>
    <string name="thanks">Thanks for understanding</string>
    <string name="noDescription">No description</string>
    <string name="movie_add_favorite">"Фильм добавлен в избранное"</string>
    <string name="movie_delete_favorite">"Фильм удален из избранного"</string>



</resources>