<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.screens.main.profile.ProfileFragment">

    <TextView
        android:id="@+id/textViewLogin"
        style="@style/bold24white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:drawableEnd="@drawable/ic_logout"
        android:drawablePadding="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLogin"
        app:layout_constraintTop_toTopOf="@+id/textViewLogin"
        tools:ignore="SpUsage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearInfoProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_40"
        android:background="@drawable/bg_card_view"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardProfileImage"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/red"
            app:strokeWidth="@dimen/dp_2">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                tools:srcCompat="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/fieldUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/cardProfileImage"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nameUSer"
                style="@style/white12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/age"
                style="@style/white12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/country"
                style="@style/white12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phone"
                style="@style/white12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_130"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/fieldUser"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nametext"
                style="@style/white12bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="username" />

            <TextView
                android:id="@+id/ageText"
                style="@style/white12bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="userage" />

            <TextView
                android:id="@+id/countryText"
                style="@style/white12bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="usercountry" />

            <TextView
                android:id="@+id/phoneText"
                style="@style/white12bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="userphone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/buttonEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_10"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_edit_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearAccount"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/bg_card_view"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearInfoProfile"
        app:layout_constraintStart_toStartOf="@+id/linearInfoProfile"
        app:layout_constraintTop_toBottomOf="@+id/linearInfoProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:id="@+id/button_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/bg_icon_profile_page"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_profilepage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_15"
                android:text="@string/member"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_140"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_3"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@color/primary_bg"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/buttonPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/bg_icon_profile_page"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_53"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_next" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearGeneral"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_card_view"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearAccount"
        app:layout_constraintStart_toStartOf="@+id/linearAccount"
        app:layout_constraintTop_toBottomOf="@+id/linearAccount">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/general"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/buttonNatification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/bg_icon_profile_page"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_notifications" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_15"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_110"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_3"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@color/primary_bg" />

        <LinearLayout
            android:id="@+id/buttonLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/bg_icon_profile_page"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_15"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_125"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_3"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@color/primary_bg" />

        <LinearLayout
            android:id="@+id/buttonCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/bg_icon_profile_page"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_15"
                android:text="@string/help_center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_110"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_next" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>